# precommit-fixme-fail

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  fixme-fail.sh  pyproject.toml  setup.cfg
fixme_fail/: main.py
